ompi/mpi/f03/mpi.f03


integer(C_INT) function &
MPI_File_write(fh, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_write")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_write

end interface MPI_File_write


interface MPI_File_write_all

integer(C_INT) function &
MPI_File_write_all(fh, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_write_all")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_write_all

end interface MPI_File_write_all


interface MPI_File_write_all_begin

integer(C_INT) function &
MPI_File_write_all_begin(fh, buf, count, datatype, ierr) &
  BIND(C, name="MPI_File_write_all_begin")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
end function MPI_File_write_all_begin

end interface MPI_File_write_all_begin


interface MPI_File_write_all_end

integer(C_INT) function &
MPI_File_write_all_end(fh, buf, status, ierr) &
  BIND(C, name="MPI_File_write_all_end")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_write_all_end

end interface MPI_File_write_all_end


interface MPI_File_write_at

integer(C_INT) function &
MPI_File_write_at(fh, offset, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_write_at")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_write_at

end interface MPI_File_write_at


interface MPI_File_write_at_all

integer(C_INT) function &
MPI_File_write_at_all(fh, offset, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_write_at_all")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_write_at_all

end interface MPI_File_write_at_all


interface MPI_File_write_at_all_begin

integer(C_INT) function &
MPI_File_write_at_all_begin(fh, offset, buf, count, datatype, ierr) &
  BIND(C, name="MPI_File_write_at_all_begin")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  integer(kind=MPI_OFFSET_KIND), value, intent(in) :: offset
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
end function MPI_File_write_at_all_begin

end interface MPI_File_write_at_all_begin


interface MPI_File_write_at_all_end

integer(C_INT) function &
MPI_File_write_at_all_end(fh, buf, status, ierr) &
  BIND(C, name="MPI_File_write_at_all_end")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_write_at_all_end

end interface MPI_File_write_at_all_end


interface MPI_File_write_ordered

integer(C_INT) function &
MPI_File_write_ordered(fh, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_write_ordered")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_write_ordered

end interface MPI_File_write_ordered


interface MPI_File_write_ordered_begin

integer(C_INT) function &
MPI_File_write_ordered_begin(fh, buf, count, datatype, ierr) &
  BIND(C, name="MPI_File_write_ordered_begin")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
end function MPI_File_write_ordered_begin

end interface MPI_File_write_ordered_begin


interface MPI_File_write_ordered_end

integer(C_INT) function &
MPI_File_write_ordered_end(fh, buf, status, ierr) &
  BIND(C, name="MPI_File_write_ordered_end")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_write_ordered_end

end interface MPI_File_write_ordered_end


interface MPI_File_write_shared

integer(C_INT) function &
MPI_File_write_shared(fh, buf, count, datatype, status, ierr) &
  BIND(C, name="MPI_File_write_shared")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: fh
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(MPI_STATUS_SIZE), value, intent(out) :: status
end function MPI_File_write_shared

end interface MPI_File_write_shared


interface MPI_Finalize

integer(C_INT) function &
MPI_Finalize(ierr) &
  BIND(C, name="MPI_Finalize")
  use MPI_C_BINDING
end function MPI_Finalize

end interface MPI_Finalize


interface MPI_Finalized

integer(C_INT) function &
MPI_Finalized(flag, ierr) &
  BIND(C, name="MPI_Finalized")
  use MPI_C_BINDING
  integer, value, intent(out) :: flag
end function MPI_Finalized

end interface MPI_Finalized


interface MPI_Free_mem

integer(C_INT) function &
MPI_Free_mem(baseptr, ierr) &
  BIND(C, name="MPI_Free_mem")
  use MPI_C_BINDING
  type(C_PTR), value, intent(inout) :: baseptr
end function MPI_Free_mem

end interface MPI_Free_mem


interface MPI_Gather

integer(C_INT) function &
MPI_Gather(sendbuf, sendcount, sendtype,
           recvbuf, recvcount, recvtype,
           root, comm, ierr) &
  BIND(C, name="MPI_Gather")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  integer(INT_C), value, intent(in) :: sendcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: sendtype
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), value, intent(in) :: recvcount
  integer(MPI_HANDLE_KIND), value, intent(in) :: recvtype
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Gather

end interface MPI_Gather


interface MPI_Gatherv

integer(C_INT) function &
MPI_Gatherv(sendbuf, sendcounts, sendtype,
            recvbuf, recvcounts, displs, recvtype,
            root, comm, ierr) &
  BIND(C, name="MPI_Gatherv")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: sendbuf
  integer(INT_C), value, intent(in) :: sendcounts
  integer(MPI_HANDLE_KIND), value, intent(in) :: sendtype
  type(C_PTR), value, intent(inout) :: recvbuf
  integer(INT_C), value, intent(in) :: recvcounts
  integer(INT_C), dimension(*), value, intent(in) :: displs
  integer(MPI_HANDLE_KIND), value, intent(in) :: recvtype
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
end function MPI_Gatherv

end interface MPI_Gatherv


interface MPI_Get

integer(C_INT) function &
MPI_Get(origin_addr, origin_count, origin_datatype, target_rank, target_disp, target_count, target_datatype, &
        win, ierr) &
  BIND(C, name="MPI_Get")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: origin_addr
  integer(INT_C), value, intent(in) :: origin_count
  integer(MPI_HANDLE_KIND), value, intent(in) :: origin_datatype
  integer(INT_C), value, intent(in) :: target_rank
  integer(kind=MPI_ADDRESS_KIND), value, intent(in) :: target_disp
  integer(INT_C), value, intent(in) :: target_count
  integer(MPI_HANDLE_KIND), value, intent(in) :: target_datatype
  integer(MPI_HANDLE_KIND), value, intent(in) :: win
end function MPI_Get

end interface MPI_Get


interface MPI_Get_address

integer(C_INT) function &
MPI_Get_address(location, address, ierr) &
  BIND(C, name="MPI_Get_address")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: location
  integer(kind=MPI_ADDRESS_KIND), value, intent(out) :: address
end function MPI_Get_address

end interface MPI_Get_address


interface MPI_Get_count

integer(C_INT) function &
MPI_Get_count(status, datatype, count, ierr) &
  BIND(C, name="MPI_Get_count")
  use MPI_C_BINDING
  integer(MPI_STATUS_SIZE), value, intent(in) :: status
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(out) :: count
end function MPI_Get_count

end interface MPI_Get_count


interface MPI_Get_elements

integer(C_INT) function &
MPI_Get_elements(status, datatype, count, ierr) &
  BIND(C, name="MPI_Get_elements")
  use MPI_C_BINDING
  integer(MPI_STATUS_SIZE), value, intent(in) :: status
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(out) :: count
end function MPI_Get_elements

end interface MPI_Get_elements


interface MPI_Get_processor_name

integer(C_INT) function &
MPI_Get_processor_name(name, resultlen, ierr) &
  BIND(C, name="MPI_Get_processor_name")
  use MPI_C_BINDING
  character(len=*), value, intent(out) :: name
  integer(INT_C), value, intent(out) :: resultlen
end function MPI_Get_processor_name

end interface MPI_Get_processor_name


interface MPI_Get_version

integer(C_INT) function &
MPI_Get_version(version, subversion, ierr) &
  BIND(C, name="MPI_Get_version")
  use MPI_C_BINDING
  integer(INT_C), value, intent(out) :: version
  integer(INT_C), value, intent(out) :: subversion
end function MPI_Get_version

end interface MPI_Get_version


interface MPI_Graph_create

integer(C_INT) function &
MPI_Graph_create(comm_old, nnodes, index, edges, reorder, comm_graph, ierr) &
  BIND(C, name="MPI_Graph_create")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm_old
  integer(INT_C), value, intent(in) :: nnodes
  integer(INT_C), dimension(*), value, intent(in) :: index
  integer(INT_C), dimension(*), value, intent(in) :: edges
  integer(INT_C), value, intent(in) :: reorder
  integer(MPI_HANDLE_KIND), value, intent(out) :: comm_graph
end function MPI_Graph_create

end interface MPI_Graph_create


interface MPI_Graph_get

integer(C_INT) function &
MPI_Graph_get(comm, maxindex, maxedges, index, edges, ierr) &
  BIND(C, name="MPI_Graph_get")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: maxindex
  integer(INT_C), value, intent(in) :: maxedges
  integer(INT_C), dimension(*), value, intent(out) :: index
  integer(INT_C), dimension(*), value, intent(out) :: edges
end function MPI_Graph_get

end interface MPI_Graph_get


interface MPI_Graph_map

integer(C_INT) function &
MPI_Graph_map(comm, nnodes, index, edges, newrank, ierr) &
  BIND(C, name="MPI_Graph_map")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: nnodes
  integer(INT_C), dimension(*), value, intent(in) :: index
  integer(INT_C), dimension(*), value, intent(in) :: edges
  integer(INT_C), value, intent(out) :: newrank
end function MPI_Graph_map

end interface MPI_Graph_map


interface MPI_Graph_neighbors
